fix(activity): stop poisoning open-activity caches with immutable lists
Stream.toList() returns an immutable list. CloseActivity25 and
SetupPromotionService both built open-activity lists with it and pushed the
result into the application and session caches; AmsDataLocal's ADD_RENEWAL
branch then called .add() on that list. ADD_TICKET and ADD_SETUP already used
the safe copy-then-set pattern - ADD_RENEWAL was the outlier.

All three sites now use Collectors.toList() or copy-then-set.

A prepared fix for two of the three has sat unmerged on main_fix (3ff1d82,
"ready if needed") since 2026-02-26. It was not merged: it predates a package
move and does not cover SetupPromotionService, which introduced the same
pattern later. main_fix is now superseded.